# perception

./: .dockerignore  .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  build.py  pyproject.toml  setup.cfg  setup.py  versioneer.py
.github/: dependabot.yaml
.github/workflows/: ci.yaml  codeql-analysis.yaml  codeql-analysis.yml  gh-pages.yaml  release.yaml
build-scripts/: linux.sh  macos.sh  windows.bat
docs/: conf.py  index.rst  requirements.txt
docs/api/: benchmarking.rst  experimental.rst  hashers.rst  index.rst  tools.rst
docs/examples/: benchmarking.rst  deduplication.rst  detecting_csam.rst  index.rst
perception/: __init__.py  _optional.py  _utils.py  _version.py  benchmarking.py  extensions.pyx  local_descriptor_deduplication.py  tools.py  utils.py
perception/approximate_deduplication/: __init__.py  _graph_backend.py  _index.py  _serve.py  debug.py  index.py  serve.py
perception/benchmarking/: __init__.py  common.py  extensions.pyx  image.py  image_transforms.py  video.py  video_transforms.py
perception/experimental/: approximate_deduplication.py  debug.py  local_descriptor_deduplication.py
perception/experimental/ann/: __init__.py  index.py  serve.py
perception/hashers/: __init__.py  average.py  dhash.py  hasher.py  opencv.py  pdq.py  phash.py  tools.py  wavelet.py
perception/hashers/image/: __init__.py  _average.py  _pdq.py  average.py  dhash.py  opencv.py  pdq.py  phash.py  wavelet.py
perception/hashers/video/: __init__.py  _tmk.py  framewise.py  scenes.py  tmk.py
perception/testing/: __init__.py  testing.py
perception/testing/images/: README.md
perception/testing/logos/: README.md
perception/testing/videos/: README.md  rgb.m4v  v1.m4v  v2.m4v  v2s.mov
tests/: test_approximate_deduplication.py  test_benchmarking.py  test_experimental.py  test_hashers.py  test_local_descriptor_deduplication.py  test_tmk.py  test_tools.py
