[project]
name = "Perception"
version = "0.0.0"
description = "Perception provides flexible, well-documented, and comprehensively tested tooling for perceptual hashing research, development, and production use."
authors = [{ name = "Thorn", email = "info@wearethorn.org" }]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
  "Cython>=3.0.0,<4.0.0",
  "numpy>=1.26.4,<3.0.0",
  "opencv-contrib-python-headless>=4.10.0,<5.0.0",
  "pandas",
  "Pillow",
  "pywavelets>=1.5.0,<2.0.0",
  "validators>=0.22.0,<1.0.0",
  "rich>=13.7.0,<14.0.0",
  "scipy",
  "tqdm>=4.67.1,<5.0.0",
]


[project.optional-dependencies]
benchmarking = [
  "matplotlib",
  "albumentations>=2.0.8,<3.0.0",
  "tabulate",
  "scikit-learn",
  "ffmpeg-python",
]
matching = ["aiohttp", "python-json-logger"]
experimental = ["networkit>=11.1,<12.0.0", "faiss-cpu>=1.8.0,<2.0.0"]
pdq = ["pdqhash>=0.2.7,<0.3.0"]


[tool.poetry.group.dev.dependencies]
black = "^24"
coverage = "*"
ipython = "*"
mypy = "*"
pandas-stubs = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
ruff = "*"
types-pillow = "*"
types-tqdm = "*"
twine = "*"
albumentations = "^2.0.8"


[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[tool.mypy]
exclude = ["/tests/"]
check_untyped_defs = true
ignore_missing_imports = true

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = [
  "poetry-core",
  "poetry-dynamic-versioning",
  "numpy",
  "Cython",
  "setuptools",
  "wheel",
]
build-backend = "poetry_dynamic_versioning.backend"
