[project]
name = "Perception"
dynamic = ["version"]
description = "Perception provides flexible, well-documented, and comprehensively tested tooling for perceptual hashing research, development, and production use."
authors = [{ name = "Thorn", email = "info@wearethorn.org" }]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
  "numpy>=1.26.4,<3.0.0",
  "opencv-contrib-python-headless>=4.10.0,<5.0.0",
  "faiss-cpu>=1.8.0,<2.0.0",
  "networkit>=11.1,<12.0.0; sys_platform != 'darwin'",
  "networkx>=3.0,<4.0; sys_platform == 'darwin'",
  "pandas",
  "Pillow",
  "pywavelets>=1.5.0,<2.0.0",
  "validators>=0.22.0,<1.0.0",
  "rich>=13.7.0,<14.0.0",
  "scipy",
  "tqdm>=4.67.1,<5.0.0",
]


[project.optional-dependencies]
benchmarking = [
  "matplotlib",
  "albumentations>=2.0.8,<3.0.0",
  "tabulate",
  "scikit-learn",
  "ffmpeg-python",
]
matching = ["aiohttp", "python-json-logger"]
pdq = ["pdqhash>=0.2.7,<0.3.0"]

[dependency-groups]
dev = [
  "albumentations>=2.0.8,<3.0.0",
  "black>=26,<27",
  "coverage",
  "ipython",
  "mypy",
  "pandas-stubs",
  "pre-commit",
  "pytest",
  "pytest-cov",
  "ruff",
  "twine",
  "types-pillow",
  "types-tqdm",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["perception*"]

[tool.setuptools.package-data]
perception = ["py.typed"]
"perception.testing" = ["images/*", "logos/*", "videos/*"]

[tool.setuptools.exclude-package-data]
perception = ["*.cpp", "*.dylib", "*.pyd", "*.pyx", "*.so"]
"perception.benchmarking" = ["*.c", "*.dylib", "*.pyd", "*.pyx", "*.so"]

[tool.setuptools_scm]
fallback_version = "0.0.0"
local_scheme = "no-local-version"

[tool.mypy]
exclude = ["/tests/"]
check_untyped_defs = true
ignore_missing_imports = true

[tool.black]
target-version = ["py310"]

[build-system]
requires = [
  "Cython>=3.0.0,<4.0.0",
  "numpy>=1.26.4,<3.0.0",
  "setuptools>=82",
  "setuptools-scm>=10",
  "wheel",
]
build-backend = "setuptools.build_meta"
