[pylint]
extension-pkg-whitelist = cv2,perception.benchmarking.extensions,perception.extensions
disable = C0111
ignore = _version.py

[mypy]
ignore_missing_imports = True
check_untyped_defs = True

[coverage:run]
omit =
    perception/_version.py

[mypy-perception._version]
ignore_errors = True

[metadata]
name = perception
author = Thorn
author_email = info@wearethorn.org
description = A package for image hashing
url = https://github.com/thorn-oss/perception
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows

[options]
packages = find:
include_package_data = True
install_requires =
    pdqhash
    pywavelets
    numpy
    scipy
    validators>=0.12.4

[tool:pytest]
addopts = --cov=perception --cov-report=term-missing
filterwarnings =
    ignore:Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated, and in 3.8 it will stop working:DeprecationWarning
    ignore:Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated since Python 3.3,and in 3.9 it will stop working:DeprecationWarning
    ignore:the imp module is deprecated in favour of importlib; see the module's documentation for alternative uses:DeprecationWarning

[options.extras_require]
benchmarking =
    tqdm
    pandas
    matplotlib
    scipy
    imgaug
    tabulate
    scikit-learn
    ffmpeg-python

[versioneer]
VCS = git
style = pep440-pre
versionfile_source = perception/_version.py
versionfile_build = perception/_version.py
tag_prefix = v