[pylint]
extension-pkg-whitelist = cv2,perception.benchmarking.extensions,perception.extensions,networkit
disable = C0111,R0401,R0801

[mypy]
ignore_missing_imports = True
check_untyped_defs = True

[metadata]
name = perception
author = Thorn
author_email = info@wearethorn.org
description = A package for image hashing
url = https://github.com/thorn-oss/perception
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows

[options]
packages = find:
include_package_data = True
install_requires =
    pywavelets
    numpy
    scipy
    validators>=0.12.4

[tool:pytest]
addopts = --cov=perception --cov-report=term-missing

[options.extras_require]
benchmarking =
    tqdm
    pandas
    matplotlib
    scipy
    imgaug
    tabulate
    scikit-learn
    ffmpeg-python
matching =
    pandas
    aiohttp
    python-json-logger
